--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "body-parser": "^1.19.0",
     "celebrate": "^15.0.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "escape-html": "^1.0.3",
     "express": "^4.17.1",
     "express-winston": "^4.2.0",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
     "validator": "^13.6.0",
