--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "movies-explorer-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production",
+    "start": "cross-env NODE_ENV=production node app.js",
     "dev": "cross-env NODE_ENV=development nodemon app.js",
     "lint": "npx eslint ."
   },
@@ -28,6 +28,7 @@
     "dotenv": "^10.0.0",
     "escape-html": "^1.0.3",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.3.0",
     "express-winston": "^4.2.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
